# trainee

./: .clang-format
battle-city/: CMakeLists.txt
battle-city/include/: barrier.h  battle_city.hpp  bullet.h  headq.h  message.h  surface.h  tank.h
battle-city/include/magic/: engine.h  infallible.h  todo.h  vec.h
battle-city/include/serde/: de.h  ser.h  serde.hpp
battle-city/src/: main.cpp
template/: .clang-tidy  CMakeLists.txt  Dockerfile
template/tests/: test.cpp
